Refactor automation scripts into consolidated structure
- Create precommit/ folder with unified validation scripts
- Create fixers/ folder with automatic fixing scripts
- Consolidate deployment scripts into deployment/
- Consolidate setup scripts into setup/
- Create reports/ folder for project reporting
- Update package.json with simplified npm scripts
- Update pre-commit hook to use new structure
- Fix path handling for spaces in directory names
- Remove emojis from validation scripts
- Create cleanup script for removing obsolete files

--- a/package.json
+++ b/package.json
@@ -3,73 +3,16 @@
   "version": "2.0.0",
   "description": "Google Apps Script automation tools with deployment status management",
   "scripts": {
-    "setup": "node automation/dev-tools/setup-projects.js",
-    "migrate": "node automation/dev-tools/migrate-projects.js", 
-    "deploy": "node automation/dev-tools/deploy-tools.js deploy-all public",
-    "deploy-beta": "node automation/dev-tools/deploy-tools.js deploy-all beta",
-    "deploy-public": "node automation/dev-tools/deploy-tools.js deploy-all public",
-    "status": "node automation/dev-tools/deploy-tools.js status",
-    "dashboard": "node automation/dev-tools/deploy-tools.js dashboard",
-    "validate": "node automation/dev-tools/validate-projects.js",
-    "set-status": "node automation/dev-tools/deploy-tools.js set-status",
-    "verify": "./automation/shell-scripts/verify-setup.sh",
-    "security:scan": "node automation/dev-tools/security-scanner.js",
-    "security:dashboard": "node docs/security/Snyk/tools/security-dashboard.js",
-    "security:gas-scan": "node docs/security/Snyk/tools/gas-security-scanner.js",
-    "snyk:test": "snyk test --all-projects",
-    "snyk:monitor": "snyk monitor --all-projects",
-    "snyk:wizard": "snyk wizard",
-    "repo:review": "node docs/tools/repo-review.js",
-    "repo:report": "node docs/tools/repo-reporter.js",
-    "repo:report-overview": "node docs/tools/repo-reporter.js overview",
-    "repo:report-security": "node docs/tools/repo-reporter.js security",
-    "repo:report-code": "node docs/tools/repo-reporter.js code",
-    "version:current": "node docs/tools/version-manager.js current",
-    "version:bump": "node docs/tools/version-manager.js bump",
-    "version:bump-minor": "node docs/tools/version-manager.js bump minor",
-    "version:bump-major": "node docs/tools/version-manager.js bump major",
-    "version:history": "node docs/tools/version-manager.js history",
-    "version:release": "node docs/tools/version-manager.js release",
-    "version:notes": "node docs/tools/version-manager.js notes",
-    "publication:check": "npm run repo:review && npm run repo:report",
-    "publication:prepare": "npm run repo:review && npm run version:bump-minor && npm run repo:report",
-    "git:sync": "./automation/shell-scripts/quick-sync.sh interactive",
-    "git:sync-auto": "./automation/shell-scripts/quick-sync.sh auto",
-    "git:quick-sync": "./automation/shell-scripts/quick-sync.sh",
-    "git:push-safe": "./automation/shell-scripts/quick-sync.sh auto",
-    "sync": "./automation/shell-scripts/git-sync.sh push",
-    "setup:ide": "./automation/shell-scripts/setup-ide.sh",
-    "setup:github": "./automation/shell-scripts/setup-github-actions.sh",
-    "setup:git-hooks": "./automation/shell-scripts/setup-git-hooks.sh",
-    "repo:cleanup": "./automation/shell-scripts/cleanup-repo.sh",
-    "lint:gas": "node automation/validation/javascript/gas-linter.js",
-    "lint:all": "node automation/validation/javascript/gas-linter.js --all",
-    "lint:staged": "node automation/validation/javascript/gas-linter.js --staged",
-    "lint:fix": "node automation/validation/javascript/gas-linter.js --fix --all",
-    "format": "node automation/dev-tools/gas-formatter.js",
-    "format:all": "node automation/dev-tools/gas-formatter.js --all",
-    "format:smart": "node automation/dev-tools/gas-formatter-smart.js",
-    "format:smart:all": "node automation/dev-tools/gas-formatter-smart.js --all",
-    "refactor:batch": "node automation/dev-tools/gas-refactor-batch.js",
-    "catalog": "node automation/dev-tools/gas-catalog.js",
-    "catalog:update": "node automation/dev-tools/gas-catalog.js",
-    "catalog:watch": "node automation/dev-tools/gas-catalog.js --watch",
-    "catalog:json": "node automation/dev-tools/gas-catalog.js --json",
-    "gas:check": "npm run lint:all && npm run catalog",
-    "gas:fix": "npm run format:all && npm run lint:fix && npm run catalog",
-    "shell:catalog": "node automation/dev-tools/shell-catalog.js",
-    "shell:catalog:watch": "node automation/dev-tools/shell-catalog.js --watch",
-    "shell:catalog:json": "node automation/dev-tools/shell-catalog.js --json",
-    "catalog:all": "npm run catalog && npm run shell:catalog",
-    "gas:discover": "node automation/dev-tools/gas-project-discovery.js",
-    "gas:download": "node automation/dev-tools/gas-project-downloader.js",
-    "gas:download:all": "node automation/dev-tools/gas-project-downloader.js --all",
-    "gas:migrate": "node automation/dev-tools/gas-project-migrator.js",
-    "gas:migrate:all": "node automation/dev-tools/gas-project-migrator.js --all",
-    "gas:delete": "node automation/dev-tools/gas-project-archiver.js",
-    "gas:delete:report": "node automation/dev-tools/gas-project-archiver.js --report",
-    "gas:convert:txt": "node automation/dev-tools/gas-txt-converter.js",
-    "gas:duplicates": "node automation/dev-tools/gas-duplicate-detector.js"
+    "setup": "./automation/setup/setup.sh",
+    "verify": "./automation/setup/verify.sh",
+    "deploy": "./automation/deployment/deploy.sh",
+    "sync": "./automation/deployment/sync.sh",
+    "precommit": "node automation/precommit/check-all.js",
+    "fix": "node automation/fixers/fix-all.js",
+    "lint": "node automation/precommit/lint-gas.js",
+    "lint:fix": "node automation/precommit/lint-gas.js --fix",
+    "report": "node automation/reports/project-report.js",
+    "report:catalog": "node automation/reports/catalog.js"
   },
   "repository": {
     "type": "git",
