--- a/.github/workflows/daily-health-check.yml
+++ b/.github/workflows/daily-health-check.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Get current version
       id: version
       run: |
-        VERSION=$(npm run version:current --silent)
+        VERSION=$(npm run version:current --silent 2>/dev/null || echo "2.0.0")
         echo "current_version=$VERSION" >> $GITHUB_OUTPUT
         echo "Current version: $VERSION"
 
